src/styles/pages/blogPost.scss
@use "../mixins" as *;

.blog-post {
	@include flex($justify: center);
	padding: 48px;

	article {
		max-width: 768px;
	}

	.markdown-body {
		font-size: 1.6rem;
		line-height: 2.6rem;
	}
}

.back-button {
	color: var(--text-color-tertiary);
}

.post- {
	&title {
		@include flex($align: center, $gap: 12px);
		margin-left: -48px;

		h1 {
			margin: 0;
			font: {
				size: 3.6rem;
				weight: 600;
			}
		}

		@media only screen and (max-width: 1024px) {
			align-items: flex-start;
			flex-direction: column;
			margin: 0;
		}
	}

	&info {
		@include flex($align: center, $gap: 12px);
		margin-bottom: 24px;
		padding: 18px 0;
		border-bottom: 1px solid var(--divider-color-default);
		background-color: var(--background-secondary);
		color: var(--text-color-tertiary);

		img {
			width: 32px;
			height: 32px;
			border: 1px solid var(--card-stroke-default);
			border-radius: 50%;
		}

		:global {
			.menu-flyout {
				min-width: 120px;

				&-container {
					margin-left: auto;
				}
			}
		}
	}

	&thumbnail {
		max-width: 100%;
		margin-bottom: 48px;
		border-radius: var(--overlay-corner-radius);
	}
}

